--- a/src/Components/Brands/Brands.css
+++ b/src/Components/Brands/Brands.css
@@ -5,7 +5,6 @@
   background-position: center;
   width: 100%;
   height: 450px;
-  margin-top: 3%;
   color: white;
   flex-direction: column;
   justify-content: space-between;
@@ -51,19 +50,19 @@
   box-sizing: border-box;
 }
 
-.marquee-content {
+.marquee-content-brands {
   display: flex;
   align-items: center;
   gap: 10px;
-  animation: marquee-animation 30s linear infinite; /* Adjust speed here */
+  animation: marquee-content 25s linear infinite; /* Adjust speed here */
 }
 
-@keyframes marquee-animation {
+@keyframes marquee-content {
   from {
-    transform: translateX(0);
+    transform: translateX(-50%);
   }
   to {
-    transform: translateX(-50%);
+    transform: translateX(0%);
   }
 }
 
