--- a/src/Components/Navbar/NavbarNew.css
+++ b/src/Components/Navbar/NavbarNew.css
@@ -2,15 +2,16 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: #161616;
-  color: white;
-  padding: 0.75rem 3rem;
+  background: #f1f1f1;
+  color: rgb(17, 17, 17);
+  padding: 1.5rem 3rem;
   position: relative;
   z-index: 50;
+  /* border-radius: 0 0 20px 20px; */
 }
 
 .logo {
-  height: 60px;
+  height: 80px;
 }
 
 .nav-center {
@@ -62,8 +63,9 @@
   justify-content: space-between;
   align-items: center;
   background: none;
-  font-weight: 300;
-  font-size: 0.9rem;
+  font-weight: 400;
+  letter-spacing: .5px;
+  font-size: 0.89rem;
   border: none;
   color: inherit;
   text-decoration: none;
@@ -74,6 +76,17 @@
 .menu ul {
   padding-left: 1rem;
 }
+.logo-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 1rem;
+}
+
+.logo-item .logo {
+  height: 70px;
+}
+
 
 /* responsive */
 @media (min-width: 992px) {
@@ -86,11 +99,13 @@
   }
   .menu {
     display: flex;
+    align-items: center;
   }
   .menu ul {
     position: absolute;
     display: none;
-    background: #1b1b1b;
+    background: #f1f1f1;
+    border-radius: 5px;
     padding: 0.5rem 1rem;
   }
   .menu-item:hover > ul {
@@ -102,7 +117,7 @@
   position: absolute;
   top: 100%;
   left: 0;
-  background: #222;
+  background: #f1f1f1;
   min-width: 220px;
   z-index: 1000;
   display: none;
@@ -155,7 +170,9 @@
     left: 100%; /* Position to the right of the parent item */
     min-width: 320px;
     padding: 0;
-    background: #222;
+    background: #f1f1f1;
+    border-radius: 5px;
+    filter: drop-shadow( 0 4px 8px rgba(0, 0, 0, 0.1));
     z-index: 1000;
   }
   .menu.depth-3 {
