--- a/src/Pages/AboutPage/AboutGraduation/AboutGraduation.css
+++ b/src/Pages/AboutPage/AboutGraduation/AboutGraduation.css
@@ -5,6 +5,11 @@
 
 @media (max-width: 768px) {
     .about-grad-img{
-        width: 100%;
+        width: 80%;
+    }
+  }
+@media (max-width: 480px) {
+    .about-grad-img{
+        width: 90%;
     }
   }
