--- a/src/Components/Sales/Sales.css
+++ b/src/Components/Sales/Sales.css
@@ -19,10 +19,12 @@
 
 .tab-btn {
   background: none;
-  border: 2px solid #74C61B;
+  border: 2px solid #3a3a3a;
+  outline: none;
   padding: 8px 20px;
-  border-radius: 25px;
-  font-weight: bold;
+  border-radius: 5px;
+  color: #3a3a3a;
+  font-weight: 400;
   cursor: pointer;
   transition: all 0.3s ease;
 }
@@ -30,11 +32,13 @@
 .tab-btn:hover {
   background-color: #74C61B;
   color: white;
+  border: 2px solid #73c61b00;
 }
 
 .tab-btn.active {
   background-color: #74C61B;
   color: white;
+  border: 2px solid #73c61b00;
 }
 
 .sales-data-div,
