--- a/src/Components/Platforms/Platforms.css
+++ b/src/Components/Platforms/Platforms.css
@@ -15,7 +15,7 @@
 .platform {
   display: flex;
   gap: 20px;
-  align-items: center;
+  align-items: flex-start;
   padding: 0 3%;
 }
 .platform img:hover {
@@ -29,6 +29,8 @@
   width: 100%;
   border-radius: 10px;
   object-fit: cover;
+  position: sticky;
+  top: 100px;
 }
 .chevron-icon {
   display: inline-block;
