updated faculity page 3 sections

--- a/src/Pages/FaculityPage/FaculityBg/FaculityBg.css
+++ b/src/Pages/FaculityPage/FaculityBg/FaculityBg.css
@@ -1,6 +1,6 @@
 .fac-apply-btn{
-    background-color: green;
+    background-color: #5ac501;
     color: white;
-    padding: 5px 20px;
+    padding: 15px 20px;
     border: none;
 }
