--- a/src/Pages/FaculityPage/FaculityContact/FaculityContact.css
+++ b/src/Pages/FaculityPage/FaculityContact/FaculityContact.css
@@ -2,14 +2,21 @@
     height: 40px;
     width: 100%;
     border: 1px solid gainsboro;
-    border-radius: 10px;
+    border-radius: 5px;
     padding-left: 10px;
+    font-weight: 100;
+    font-size: 13px;
 
+}
+.name-input-con{
+    width: 100%;
 }
 .fac-contact-right{
     width: 100%;
 }
 .fac-textarea{
+    font-weight: 100;
+    font-size: 13px;
     width: 100%;
     height: 150px;
     border: 1px solid gainsboro;
@@ -19,7 +26,7 @@
 .contact-send-msg{
     width: 100%;
     background-color: #74C61B;
-    padding: 5px;
+    padding: 15px;
     border: none;
     color: white;
 }
