--- a/src/Pages/FaculityPage/FaculityVission/FaculityVission.css
+++ b/src/Pages/FaculityPage/FaculityVission/FaculityVission.css
@@ -47,5 +47,25 @@
     opacity: 1; 
     transform: translateX(0);
   }
+  @media (max-width: 768px) {
+    .vision-images img{
+        width: 100%;
+        height: 200px;
+    }
+    .faculty-banner{
+        width: 100%;
+        height: 70vh;
+        object-fit: cover;
+    }
+    .vision-images{
+        display: none !important;
+    }
+  }
+@media (max-width: 480px) {
+    .vision-images img{
+        width: 100%;
+        height: 200px;
+    }
+  }
   
   
