--- a/src/Pages/FaculityPage/FaculityContact/FaculityContact.css
+++ b/src/Pages/FaculityPage/FaculityContact/FaculityContact.css
@@ -2,7 +2,7 @@
     height: 40px;
     width: 100%;
     border: 1px solid gainsboro;
-    border-radius: 5px;
+    border-radius: 2px;
     padding-left: 10px;
     font-weight: 100;
     font-size: 13px;
@@ -20,8 +20,9 @@
     width: 100%;
     height: 150px;
     border: 1px solid gainsboro;
-    border-radius: 10px;
+    border-radius: 2px;
     padding-left: 10px;
+    padding-top: 20px;
 }
 .contact-send-msg{
     width: 100%;
