--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,7 +1,6 @@
 .footer-container {
   background-color: #181818;
   width: 100%;
-  padding: 20px;
   color: white;
   position: relative;
   overflow: hidden;
@@ -11,6 +10,7 @@
   position: absolute;
   width: 100%;
   object-fit: cover;
+  height: 100%;
 }
 
 .footer-first-row {
