--- a/src/Components/Platforms/Platforms.css
+++ b/src/Components/Platforms/Platforms.css
@@ -100,6 +100,9 @@
 
 /* ---------------- MOBILE RESPONSIVE ---------------- */
 @media (max-width: 768px) {
+  .image-wrapper{
+        width: 100%;
+  }
     .platforms-container {
         margin-top: 10%;
     }
