--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -57,20 +57,24 @@
   background: #fff;
   border-top: 2px solid #eee;
   z-index: 1000;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.25);
   width: 100vw;
   min-width: 300px;
   max-width: 1200px;
   padding: 2rem;
 }
-.dropdown-menu.programs, .dropdown-menu.advisory-councils{
-    left:210% !important;
+.dropdown-menu.programs,
+.dropdown-menu.advisory-councils {
+  left: 210% !important;
 }
-.dropdown-menu.about, .dropdown-menu.consortium , .dropdown-menu.campus-placements{
-    width: 300px !important;
+.dropdown-menu.about,
+.dropdown-menu.consortium,
+.dropdown-menu.campus-placements {
+  width: 300px !important;
 }
-.dropdown-menu.faculty , .dropdown-menu.industry-academia-engagement{
-    width: 600px !important;
+.dropdown-menu.faculty,
+.dropdown-menu.industry-academia-engagement {
+  width: 600px !important;
 }
 .navbar-nav > .dropdown:hover .dropdown-menu {
   display: block;
@@ -93,15 +97,19 @@
 
 /* column heading */
 .dropdown-menu-col .top-head {
-  font-size: 0.8rem;
-  font-weight: 700;
+  font-size: 0.75rem;
   color: #000080;
+  text-decoration: none;
   text-transform: uppercase;
   border-bottom: 1px solid #ff7b00;
   margin-bottom: 10px;
   padding-bottom: 4px;
 }
-
+.top-head a {
+  text-decoration: none;
+  font-weight: 500;
+  letter-spacing: 0.6px;
+}
 /* links inside dropdown */
 .dropdown-menu-col ul {
   list-style: none;
@@ -180,7 +188,7 @@
   top: 0;
   right: 0;
   width: 100%;
-  max-width:100%;
+  max-width: 100%;
   height: 100%;
   background: #fff;
   color: #111;
@@ -276,8 +284,8 @@
 .chevron.open {
   transform: rotate(180deg);
 }
-.mobile-right{
-    display: none !important;
+.mobile-right {
+  display: none !important;
 }
 
 @media (max-width: 991px) {
@@ -285,7 +293,7 @@
     display: inline-flex;
     align-items: center;
   }
-  .mobile-right{
+  .mobile-right {
     display: flex !important;
   }
 
@@ -293,5 +301,56 @@
   .top-bar,
   .navbar-main {
     display: none !important;
+  }
+}
+
+.logo-box {
+  position: absolute;
+  top: 0px; /* shadow offset */
+  left: 0px; /* shadow offset */
+  display: inline-block;
+  /* background: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.6) 0%,
+    rgba(0, 0, 0, 0.3) 2%,
+    rgba(255, 255, 255, 0) 60%
+  ); */
+  width: auto;
+  padding: 10px 10px;
+  clip-path: polygon(0 0, 100% 0%, 75% 100%, 0% 100%);
+  width: 250px;
+  z-index: 0; /* create stacking context */
+}
+
+.logo-box::after {
+  content: "";
+  position: absolute;
+  top: -2px;
+  left: -8px;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  /* background: rgba(0, 0, 0, 0.8); */
+  clip-path: polygon(0 0, 100% 0%, 75% 100%, 0% 100%);
+  z-index: -1; /* behind white box inside its context */
+}
+
+.logo-img {
+  height: 150px;
+  width: 175px;
+  display: block;
+}
+
+@media (max-width: 991px) {
+.logo-box {
+    display: none;
+  }
+  .logo-img{
+    height: 80px; 
+    width: auto !important;
+  }
+
+  .logo-box::after {
+    content: none;
   }
 }
