updated new faculty page

--- a/src/Components/NewFaculty/NewFac.css
+++ b/src/Components/NewFaculty/NewFac.css
@@ -28,7 +28,7 @@
     cursor: pointer;
   }
   .bg-banner-color-fsc{
-    background-color: #003E68;
+    background-color: rgb(1, 1, 177);
   }
   
   .icon {
