--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -4,6 +4,7 @@
 .top-bar {
   background: #f8f8f8;
   font-size: 0.85rem;
+
 }
 .top-bar a {
   color: #9a9999;
@@ -19,6 +20,9 @@
   color: #333;
 }
 
+.navbar{
+    box-shadow: 0px 4px 7px 1px #312f2f52 !important;
+}
 /* ------------------------------
    Navbar Links
 --------------------------------*/
@@ -56,22 +60,31 @@
   transform: translateX(-50%) translateY(-10px);
   opacity: 0;
   visibility: hidden;
-  background: #0069f5;
-  border-top: 2px solid #348cff;
+
+  /* Glassmorphism background */
+  background: rgba(14, 14, 34, 0.37); /* translucent blue */
+  backdrop-filter: blur(14px) saturate(180%);
+  -webkit-backdrop-filter: blur(18px) saturate(180%); /* Safari support */
+
+  border-top: 2px solid rgba(52, 140, 255, 0.5);
+  border-radius: 12px;
+
   z-index: 1000;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3);
 
   width: 0;
   max-width: 1200px;
-  max-height: 0; /* collapsed */
+  max-height: 0;
   overflow: hidden;
+  padding: 0 2rem;
 
-  padding: 0 2rem; /* no vertical padding initially */
-
-  transition: opacity 0.5s ease, width 0.5s ease-in-out,
-    max-height 0.3s ease-in-out 0.8s,
-    /* start after width finishes */ padding 0.3s ease-in-out 0.8s,
-    transform 0.5s ease, visibility 0.5s ease;
+  transition: 
+    opacity 0.5s ease,
+    width 0.5s ease-in-out,
+    max-height 0.3s ease-in-out 0.8s, /* start after width finishes */
+    padding 0.3s ease-in-out 0.8s,
+    transform 0.5s ease,
+    visibility 0.5s ease;
 }
 
 .navbar-nav > .dropdown:hover .dropdown-menu {
@@ -87,10 +100,19 @@
 .dropdown-menu.advisory-councils {
   left: 210% !important;
 }
+.dropdown-menu.programs,.dropdown-menu.advisory-councils{
+  width: 79vw !important;
+}
 .dropdown-menu.about,
-.dropdown-menu.consortium,
 .dropdown-menu.campus-placements {
   width: 300px !important;
+}
+.dropdown-menu.about{
+left: 90% !important;
+}
+.dropdown-menu.consortium{
+width: 260px !important;
+left: 10% !important;
 }
 .dropdown-menu.faculty,
 .dropdown-menu.industry-academia-engagement {
@@ -139,15 +161,24 @@
 }
 .dropdown-menu-col ul li {
   margin-bottom: 6px;
+  padding-left: .8rem;
+  padding-right: .8rem;
 }
 .dropdown-menu-col ul li a {
   font-size: 0.75rem;
+  letter-spacing: 1px;
+  /* margin-left: 1rem; */
   font-weight: 300;
-  color: #e5e5e5 !important;
+  color: #e9e9e9 !important;
   text-decoration: none;
 }
-.dropdown-menu-col ul li a:hover {
-  text-decoration: underline;
+.dropdown-menu-col ul li:hover{
+  background-color: #ffffffb6;
+  border-radius: 2px;
+}
+.dropdown-menu-col ul li:hover a {
+  color: rgb(0, 0, 0) !important;
+  /* text-decoration: underline; */
 }
 
 /* ------------------------------
