--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -223,7 +223,7 @@ left: 10% !important;
   background: #111;
   color: #fff;
 }
-.icon {
+.icons {
   cursor: pointer;
 }
 /* === DRAWER OVERLAY === */
