--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -4,7 +4,6 @@
 .top-bar {
   background: #f8f8f8;
   font-size: 0.85rem;
-
 }
 .top-bar a {
   color: #9a9999;
@@ -20,8 +19,8 @@
   color: #333;
 }
 
-.navbar{
-    box-shadow: 0px 4px 7px 1px #312f2f52 !important;
+.navbar {
+  box-shadow: 0px 4px 7px 1px #312f2f52 !important;
 }
 /* ------------------------------
    Navbar Links
@@ -42,7 +41,7 @@
   left: 0;
   height: 2px;
   width: 0;
-  background: #ff8801;
+  background: #74e974;
   transition: width 0.3s ease;
 }
 .navbar-nav .nav-link:hover::before {
@@ -78,13 +77,10 @@
   overflow: hidden;
   padding: 0 2rem;
 
-  transition: 
-    opacity 0.5s ease,
-    width 0.5s ease-in-out,
-    max-height 0.3s ease-in-out 0.8s, /* start after width finishes */
-    padding 0.3s ease-in-out 0.8s,
-    transform 0.5s ease,
-    visibility 0.5s ease;
+  transition: opacity 0.5s ease, width 0.5s ease-in-out,
+    max-height 0.3s ease-in-out 0.8s,
+    /* start after width finishes */ padding 0.3s ease-in-out 0.8s,
+    transform 0.5s ease, visibility 0.5s ease;
 }
 
 .navbar-nav > .dropdown:hover .dropdown-menu {
@@ -100,19 +96,20 @@
 .dropdown-menu.advisory-councils {
   left: 210% !important;
 }
-.dropdown-menu.programs,.dropdown-menu.advisory-councils{
+.dropdown-menu.programs,
+.dropdown-menu.advisory-councils {
   width: 79vw !important;
 }
 .dropdown-menu.about,
 .dropdown-menu.campus-placements {
   width: 300px !important;
 }
-.dropdown-menu.about{
-left: 90% !important;
+.dropdown-menu.about {
+  left: 90% !important;
 }
-.dropdown-menu.consortium{
-width: 260px !important;
-left: 10% !important;
+.dropdown-menu.consortium {
+  width: 260px !important;
+  left: 10% !important;
 }
 .dropdown-menu.faculty,
 .dropdown-menu.industry-academia-engagement {
@@ -139,14 +136,33 @@ left: 10% !important;
 
 /* column heading */
 .dropdown-menu-col .top-head {
+  position: relative;
   font-size: 0.75rem;
   color: #fff;
+  cursor: pointer;
   text-decoration: none;
   text-transform: uppercase;
-  border-bottom: 1px solid #74e974;
   margin-bottom: 10px;
   padding-bottom: 4px;
 }
+
+/* create the animated border */
+.dropdown-menu-col .top-head::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  height: 2px;
+  width: 0;
+  background-color: #74e974;
+  transition: width 0.3s ease;
+}
+
+/* expand border on hover */
+.dropdown-menu-col .top-head:hover::after {
+  width: 100%;
+}
+
 .top-head a {
   text-decoration: none;
   font-weight: 500;
@@ -161,8 +177,8 @@ left: 10% !important;
 }
 .dropdown-menu-col ul li {
   margin-bottom: 6px;
-  padding-left: .8rem;
-  padding-right: .8rem;
+  padding-left: 0.8rem;
+  padding-right: 0.8rem;
 }
 .dropdown-menu-col ul li a {
   font-size: 0.75rem;
@@ -172,7 +188,7 @@ left: 10% !important;
   color: #e9e9e9 !important;
   text-decoration: none;
 }
-.dropdown-menu-col ul li:hover{
+.dropdown-menu-col ul li:hover {
   background-color: #ffffffb6;
   border-radius: 2px;
 }
@@ -355,15 +371,21 @@ left: 10% !important;
     display: none !important;
   }
 }
-.Business-school{
-  position: absolute;
-  left: 13%;
-  top: 30%;
+.logo-with-text{
+  display: flex !important;
+  flex-direction: column;
+  margin-bottom: 0;
+
+
 }
-.logo-text{
+.logo-text {
   color: #111;
+  font-size: 12px;
   font-weight: 400 !important;
-  margin-bottom: auto;
+    margin-left: 15%;
+    margin-top: -3.5%;
+    margin-bottom: 2%;
+  /* margin: auto; */
 }
 .logo-box {
   position: absolute;
@@ -377,7 +399,7 @@ left: 10% !important;
     rgba(255, 255, 255, 0) 60%
   ); */
   width: auto;
-  padding: 10px 10px;
+  padding: 5px 5px;
   clip-path: polygon(0 0, 100% 0%, 75% 100%, 0% 100%);
   width: 250px;
   z-index: 0; /* create stacking context */
@@ -397,7 +419,7 @@ left: 10% !important;
 }
 
 .logo-img {
-  height: 145px;
+  height: 155px;
   width: 175px;
   display: block;
 }
