--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -151,7 +151,7 @@
   content: "";
   position: absolute;
   left: 0;
-  bottom: -10px;
+  bottom: -5px;
   height: 2px;
   width: 0;
   background-color: #74e974;
@@ -379,10 +379,11 @@
 
 }
 .logo-text {
-  color: #111;
-  font-size: 12px;
+  color: #1800ad;
+  font-size: 14px;
+  letter-spacing: .5px;
   font-weight: 400 !important;
-    margin-left: 15%;
+    margin-left: 13%;
     margin-top: -3.5%;
     margin-bottom: 2%;
   /* margin: auto; */
