--- a/src/Components/Platforms/Platforms.css
+++ b/src/Components/Platforms/Platforms.css
@@ -17,12 +17,14 @@
   gap: 20px;
   align-items: flex-start;
   padding: 0 3%;
+  /* min-height: 100vh; */
 }
 .image-wrapper {
   position: sticky;
   top: 100px;
   align-self: flex-start; /* important for sticky in flex */
   flex-shrink: 0;
+  width: 50%;
   max-height: calc(100vh - 100px);
 }
 
@@ -54,7 +56,14 @@
 .platform-data-div {
   width: 100%;
   position: relative;
+ max-height: calc(100vh - 100px);
+ overflow-y: scroll;
+scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE/Edge */
+}
 
+.platform-data-div::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
 }
 
 .platform-item-div {
