--- a/src/index.css
+++ b/src/index.css
@@ -127,7 +127,7 @@
 
 body {
     font-family: "AcidGrotesk", sans-serif !important;
-overflow-x: hidden;
+/* overflow-x: hidden; */
 margin: 0;
 }
 h1,h2,h3,h4,h5,h6{
