--- a/src/reset.css
+++ b/src/reset.css
@@ -1,9 +1,9 @@
 /* reset.css */
-* {
+/* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
+  } */
   /* body {
     font-family: 'DM Sans' !important;
   }
