--- a/src/Components/Brands/Brands.css
+++ b/src/Components/Brands/Brands.css
@@ -34,6 +34,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: white;
+  padding: 10px 20px;
+  border-radius: 10px;
 }
 
 .img-item-div img {
