--- a/src/Components/CareerSection/CareerSection.css
+++ b/src/Components/CareerSection/CareerSection.css
@@ -30,7 +30,7 @@
 }
 .car-item-div {
   display: flex;
-  align-items: center;
+  align-items: start;
   flex-direction: row; /* keep image on top, text below */
   gap: 1rem;/* minimum height */
   height: 100%;       /* allow Swiper to stretch evenly */
@@ -55,10 +55,12 @@
 .car-right{
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    justify-content: space-between;
     width: 100%;
+    height: 100%;
 }
 .car-explore-btn-div{
+  margin-top: auto;
     display: flex;
     gap: 10px;
 }
